# optimized-algorithm-library

./: README.md  generate_project_structure.sh
OptimizedAlgorithmLibrary/: CMakeLists.txt
OptimizedAlgorithmLibrary/include/algorithms/graph/: bfs.h  dfs.h  dijkstra.h  kruskal.h  prim.h
OptimizedAlgorithmLibrary/include/algorithms/optimization/: genetic_algorithm.h  knapsack.h  traveling_salesman.h
OptimizedAlgorithmLibrary/include/algorithms/searching/: binary_search.h  exponential_search.h  fibonacci_search.h  interpolation_search.h  jump_search.h
OptimizedAlgorithmLibrary/include/algorithms/sorting/: counting_sort.h  heap_sort.h  merge_sort.h  quick_sort.h  tim_sort.h
OptimizedAlgorithmLibrary/include/data_structures/: binary_tree.h  hash_table.h  linked_list.h
OptimizedAlgorithmLibrary/src/algorithms/graph/: bfs.cpp  dfs.cpp  dijkstra.cpp  kruskal.cpp  prim.cpp
OptimizedAlgorithmLibrary/src/algorithms/optimization/: genetic_algorithm.cpp  knapsack.cpp  traveling_salesman.cpp
OptimizedAlgorithmLibrary/src/algorithms/searching/: binary_search.cpp  exponential_search.cpp  fibonacci_search.cpp  interpolation_search.cpp  jump_search.cpp
OptimizedAlgorithmLibrary/src/algorithms/sorting/: counting_sort.cpp  heap_sort.cpp  merge_sort.cpp  quick_sort.cpp  tim_sort.cpp
OptimizedAlgorithmLibrary/src/data_structures/: binary_tree.cpp  hash_table.cpp  linked_list.cpp
OptimizedAlgorithmLibrary/tests/algorithms/graph/: test_bfs.cpp  test_dfs.cpp  test_dijkstra.cpp  test_kruskal.cpp  test_prim.cpp
OptimizedAlgorithmLibrary/tests/algorithms/optimization/: test_genetic_algorithm.cpp  test_knapsack.cpp  test_traveling_salesman.cpp
OptimizedAlgorithmLibrary/tests/algorithms/searching/: test_binary_search.cpp  test_exponential_search.cpp  test_fibonacci_search.cpp  test_interpolation_search.cpp  test_jump_search.cpp
OptimizedAlgorithmLibrary/tests/algorithms/sorting/: test_counting_sort.cpp  test_heap_sort.cpp  test_merge_sort.cpp  test_quick_sort.cpp  test_tim_sort.cpp
OptimizedAlgorithmLibrary/tests/data_structures/: test_binary_tree.cpp  test_hash_table.cpp  test_linked_list.cpp
